first attempt on fixing the alignment bug

--- a/main/mainv2/guesswhat/chickenbutt/burgerwopperwithUturnSignsForLifeonchair/style.css
+++ b/main/mainv2/guesswhat/chickenbutt/burgerwopperwithUturnSignsForLifeonchair/style.css
@@ -8,7 +8,6 @@
   } 
 
   .dropdown-content {
-    text-align: center;
     display: none;
     position: absolute;
     width: 20%;
@@ -18,12 +17,10 @@
 }
 
 .dropdown:hover .dropdown-content {
-    text-align: center;
     display: block;
 }
 
 .dropdown-content a {
-    text-align: center;
     display: block;
     color: #000000;
     padding: 5px;
